--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row">
                     <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                        <h2>Prarambh Old Age Home <strong>Welcomes YOU</strong></h2>
+                        <h2>Prarambh Old Age Home <br> <strong>Welcomes YOU</strong></h2>
                         <h4>Second Home for your Second Innings.</h4>
                         <a href="#about" class="main-button-slider">Find Out More</a>
                     </div>
