--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         <h5>Live the second inning of life to the fullest</h5>
                     </div>
                     <div class="left-text">
-                        <p></p>
-                        <a href="#about2" class="main-button">Discover More</a>
+                        <p>Prarambh is the ideal home to start a second innings with good quality care and the warmth of a family. It is the friend and partner that helps nurturing lives through happiness and encourages one to make new friends, pursue their interests, and live life independently at their own pace, ensuring they never feel alone.</p>
+                        <a href="#services" class="main-button">Discover More</a>
                     </div>
                 </div>
             </div>
